--- a/BikesAPI_Trzic_Map.html
+++ b/BikesAPI_Trzic_Map.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>City Map with Improved Popups</title>
+    <title>City Tržič Map with Improved Popups</title>
     <style>
         body {
             font-family: Arial, sans-serif;
