Tension property removed
Tension property removed in Chart.js configuration js code. Streight lines are prettier than curved.

--- a/BikesAPI_Trzic_WebPagination_12.html
+++ b/BikesAPI_Trzic_WebPagination_12.html
@@ -357,7 +357,7 @@
                     label: `ID ${id} - ${property.replace('numberOf', '')}`,
                     borderColor: getRandomColor(),
                     data: mappedData,
-                    tension: 0.5
+                    //tension: 0.5
                 };
 
                 // Push the newDataset object into datasets
